[project]
name = "testcase-llm-api"
version = "0.1.0"
description = ""
authors = [
    {name = "pkonda01",email = "praveen.kondapalli@blueshieldca.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "transformers (>=4.57.1,<5.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.poetry]
packages = [{include = "testcase_llm_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
